Adding Configuration Options Functionality

--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,8 @@
     />
     <!-- Bootstrap CSS -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
     />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/img/logo.svg" />
@@ -26,7 +24,7 @@
 
     <title>Admin Dashboard Generator</title>
   </head>
-  <body class="d-flex flex-column mh-100 overflow-hidden">
+  <body class="d-flex flex-column">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <header>
       <div class="container-fluid border-bottom pb-1">
@@ -56,20 +54,11 @@
         </div>
       </div>
     </header>
-    <div id="root" class="h-100 mh-100"></div>
+    <div id="root" class="d-flex flex-column border-bottom"></div>
   </body>
 
   <!-- Bootstrap Scripts -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-    crossorigin="anonymous"
-  ></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- Ionicon -->
   <script
